tests/arch/riscv/error/compiler/test_riscv_error_compiler_018.s

#
# Creator (https://creatorsim.github.io/creator/)
#

.data
  example:   .half 0x12345
    
.text
  main:
    addi x0, x0, 0